# unconstexpr-cpp20

./: CMakeLists.txt  LICENSE  README.md  godbolt.hpp  unconstexpr_godbolt.hpp
.github/workflows/: ccpp.yml  godbolt.yml
include/: actions.hpp  meta_value.hpp  operators.hpp  unconstexpr.hpp  unconstexpr_godbolt.hpp  unconstexpr_godbolt2.hpp  unique_id.hpp  utils.hpp
include/unconstexpr/: actions.hpp  meta_value.hpp  operators.hpp  unconstexpr.hpp  unique_id.hpp  utils.hpp
tests/: CMakeLists.txt  unconstexpr.cpp
